working solver